--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
   <!-- OGP -->
   <meta property="og:title" content="とりの丘トリズ大富豪">
   <meta property="og:description" content="みりんてゃ達と対戦！キャラの掛け合いが楽しい学園大富豪。都落ち／献上にも対応。">
-  <meta property="og:image" content="https://example.com/assets/ogp.png">
-  <meta property="og:url" content="https://example.com/game/">
+  <meta property="og:image" content="https://mofu-mitsu.github.io/daifugo/ogp.png">
+  <meta property="og:url" content="https://mofu-mitsu.github.io/daifugo/">
   <meta property="og:type" content="game">
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="とりの丘トリズ大富豪">
   <meta name="twitter:description" content="みりんてゃと対戦して学園のトップを目指そう！">
-  <meta name="twitter:image" content="https://example.com/assets/ogp/ogp_v1.png">
+  <meta name="twitter:image" content="https://mofu-mitsu.github.io/daifugo/ogp.png">
 
   <link rel="stylesheet" href="style.css">
 </head>
