--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>とりの丘トリズ大富豪</title>
 
   <!-- 基本メタ -->
-  <meta name="description" content="みりんてゃとクラスメイト達が賑やかに戦う、とりの丘学園の大富豪ゲーム！キャラボイス付き・都落ちや献上ルール・観戦モード対応。">
+  <meta name="description" content="みりんてゃとクラスメイト達が賑やかに戦う、とりの丘学園の大富豪ゲーム！キャラボイス付き・都落ち・献上・観戦モード搭載。">
   <meta name="theme-color" content="#ffb6d5">
 
-  <!-- favicon & icons（Vercelは絶対パスが安定） -->
-  <link rel="icon" href="/assets/icons/favicon.ico">
-  <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/assets/icons/favicon-32.png" sizes="32x32">
+  <!-- Icons（root直置き対応） -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32.png" sizes="32x32">
 
-  <!-- OGP（Vercel URL入れ替え必須） -->
+  <!-- OGP（Vercel本番URLに差し替えてOK） -->
   <meta property="og:title" content="とりの丘トリズ大富豪">
   <meta property="og:description" content="みりんてゃ達と対戦する賑やか大富豪！都落ち・献上・観戦モード搭載。">
-  <meta property="og:image" content="https://daifugo.vercel.app/assets/ogp/ogp.png">
+  <meta property="og:image" content="/ogp.png">
   <meta property="og:url" content="https://daifugo.vercel.app/">
   <meta property="og:type" content="website">
 
@@ -25,7 +26,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="とりの丘トリズ大富豪">
   <meta name="twitter:description" content="みりんてゃと対戦して学園のトップを目指す大富豪！観戦モードあり。">
-  <meta name="twitter:image" content="https://daifugo.vercel.app/assets/ogp/ogp.png">
+  <meta name="twitter:image" content="/ogp.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="/style.css">
