--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>とりの丘トリズ大富豪</title>
+  <title>とりの丘トリ'S大富豪</title>
 
   <!-- 基本メタ -->
   <meta name="description" content="みりんてゃとクラスメイト達が賑やかに戦う、とりの丘学園の大富豪ゲーム！キャラボイス付き・都落ち・献上・観戦モード搭載。">
