--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <span class="close">&times;</span>
             <h2>ルール説明</h2>
         <div id="rule-explanation">
-            <p>・最初にカードを配ります。プレイヤーは13枚、AIも13枚のカードを持ちます。</p>
+            <p>・最初に山札の52枚を、選択した人数で均等に配ります。</p>
             <p>・ゲームは時計回りで進行し、順番にカードを出します。</p>
             <p>・カードは同じ数字のものを1枚以上まとめて出せます。</p>
             <p>・場のカードより強いカードのみ出せます。（革命中は強弱が逆転します）</p>
