--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
     </div>
     <!-- キャラクター選択モーダル -->
     <div id="character-modal" class="modal">
+        <!-- ★ここに追加！ワープボタン -->
+        <button id="modal-jump-btn"><i class="fa-solid fa-arrow-down"></i></button>
+    
+        <div class="modal-content character-modal-content">
+            <!-- 中身はそのまま... -->
         <div class="modal-content character-modal-content">
             <span class="close" id="close-character-modal">&times;</span>
             <h2>キャラクターを選択</h2>
