--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             <div id="field"></div>
             <div id="players"></div>
             <div id="player-hand"></div>
+            <!-- ★スキップボタン（最初は非表示） -->
+            <button id="skip-game-btn" style="display: none; margin: 0 auto 20px auto; background: linear-gradient(45deg, #FFC107, #FF9800); color: white; padding: 10px 30px; border-radius: 50px; font-weight: bold; box-shadow: 0 4px 15px rgba(255, 152, 0, 0.4);">
+                <i class="fa-solid fa-forward"></i> 残りの試合をスキップ
+            </button>
             <div id="controls">
                 <button id="play-button">出す</button>
                 <button id="pass-button">パス</button>
