--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <p>・ゲームは時計回りで進行し、順番にカードを出します。</p>
                 <p>・カードは同じ数字のものを1枚以上まとめて出せます。</p>
                 <p>・場のカードより強いカードのみ出せます。（革命中は強弱が逆転します）</p>
-                <p>・カードの強さは、3 < 4 < 5 < 6 < 7 < 8 < 9 < 10 < J < Q < K < 2 です。</p>
+                <p>・カードの強さは、3 < 4 < 5 < 6 < 7 < 8 < 9 < 10 < J < Q < K < A < 2 です。</p>
                 <p>・8を含むカードを出すと、場が流れてリセットされ、同じ枚数のカードが出せます。</p>
                 <p>・同じ数字を4枚出すと「革命」が発生し、カードの強弱が逆転します。</p>
                 <p>・手札をすべて出し切ると上がりとなり、順位（大富豪・富豪・貧民・大貧民）が決定します。</p>
